--- a/package.json
+++ b/package.json
@@ -14,9 +14,13 @@
     "postinstall": "npx patch-package"
   },
   "dependencies": {
+    "@react-native-community/blur": "^4.4.1",
+    "@react-native-community/geolocation": "^3.4.0",
     "@react-native-masked-view/masked-view": "^0.3.1",
+    "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/stack": "^6.3.29",
+    "@tamagui/config": "^1.111.11",
     "@tanstack/react-query": "^5.31.0",
     "i18next": "^23.11.2",
     "ky": "^1.2.4",
@@ -24,10 +28,12 @@
     "react-i18next": "^14.1.0",
     "react-native": "0.74.1",
     "react-native-gesture-handler": "^2.16.0",
+    "react-native-maps": "^1.18.0",
     "react-native-mmkv": "^2.12.2",
     "react-native-reanimated": "^3.9.0-rc.1",
     "react-native-safe-area-context": "^4.10.1",
     "react-native-screens": "3.31.1",
+    "tamagui": "^1.111.11",
     "zod": "^3.23.0"
   },
   "devDependencies": {
