--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
     },
     "allowImportingTsExtensions": false,
     "module": "esnext",
+    "jsx": "react" // Add this line
   },
   "include": [
     "./src/**/*",
