--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@react-navigation/stack": "^6.3.29",
     "@tamagui/config": "^1.111.11",
     "@tanstack/react-query": "^5.31.0",
+    "d3-polygon": "^3.0.1",
+    "geometric": "^2.5.4",
     "i18next": "^23.11.2",
     "ky": "^1.2.4",
     "react": "18.2.0",
@@ -33,6 +35,7 @@
     "react-native-reanimated": "^3.9.0-rc.1",
     "react-native-safe-area-context": "^4.10.1",
     "react-native-screens": "3.31.1",
+    "react-native-svg": "^15.7.1",
     "tamagui": "^1.111.11",
     "zod": "^3.23.0"
   },
@@ -46,6 +49,7 @@
     "@react-native/typescript-config": "0.74.83",
     "@testing-library/jest-native": "^5.4.2",
     "@testing-library/react-native": "^12.1.2",
+    "@types/geometric": "^2.5.3",
     "@types/jest": "^29.4.0",
     "@types/node": "^18.14.1",
     "@types/react": "^18.2.6",
